Update the Clean-up notebook to include deleting recommenders
Added a method to delete the recommenders before deleting campaings and other resources.

--- a/notebooks/Media/05_Clean_Up.ipynb
+++ b/notebooks/Media/05_Clean_Up.ipynb
@@ -299,8 +299,11 @@
     "        logger.info('Dataset Group ARN: ' + dataset_group_arn)\n",
     "\n",
     "        solution_arns = _get_solutions(dataset_group_arn)\n",
+    "        \n",
+    "        # 1. Delete Recommenders\n",
+    "        _delete_recommenders(dataset_group_arn)\n",
     "\n",
-    "        # 1. Delete campaigns\n",
+    "        # 2. Delete campaigns\n",
     "        _delete_campaigns(solution_arns)\n",
     "\n",
     "        # 2. Delete solutions\n",
