--- a/notebooks/Media/05_Clean_Up.ipynb
+++ b/notebooks/Media/05_Clean_Up.ipynb
@@ -72,6 +72,34 @@
     "\n",
     "    return solution_arns\n",
     "\n",
+    "def _delete_recommenders(dataset_group_arn):\n",
+    "    recommender_arns = []\n",
+    "    recommenders_response = personalize.list_recommenders(datasetGroupArn = dataset_group_arn, maxResults = 100)\n",
+    "    for recommender in recommenders_response['recommenders']:\n",
+    "        logger.info('Deleting recommender ' + recommender['recommenderArn'])\n",
+    "        personalize.delete_recommender(recommenderArn = recommender['recommenderArn'])\n",
+    "        recommender_arns.append(recommender['recommenderArn'])\n",
+    "    max_time = time.time() + 30*60 # 30 mins\n",
+    "    while time.time() < max_time:\n",
+    "        for recommender_arn in recommender_arns:\n",
+    "            try:\n",
+    "                describe_response = personalize.describe_recommender(recommenderArn = recommender_arn)\n",
+    "                logger.debug('Recommender {} status is {}'.format(recommender_arn, describe_response['recommender']['status']))\n",
+    "            except ClientError as e:\n",
+    "                error_code = e.response['Error']['Code']\n",
+    "                if error_code == 'ResourceNotFoundException':\n",
+    "                    recommender_arns.remove(recommender_arn)\n",
+    "\n",
+    "        if len(recommender_arns) == 0:\n",
+    "            logger.info('All recommenders have been deleted or none exist for dataset group')\n",
+    "            break\n",
+    "        else:\n",
+    "            logger.info('Waiting for {} recommender(s) to be deleted'.format(len(recommender_arns)))\n",
+    "            time.sleep(20)\n",
+    "\n",
+    "    if len(recommender_arns) > 0:\n",
+    "        raise Exception('Timed out waiting for all recommender(s) to be deleted')\n",
+    "\n",
     "def _delete_campaigns(solution_arns):\n",
     "    campaign_arns = []\n",
     "\n",
@@ -306,19 +334,19 @@
     "        # 2. Delete campaigns\n",
     "        _delete_campaigns(solution_arns)\n",
     "\n",
-    "        # 2. Delete solutions\n",
+    "        # 3. Delete solutions\n",
     "        _delete_solutions(solution_arns)\n",
     "\n",
-    "        # 3. Delete event trackers\n",
+    "        # 4. Delete event trackers\n",
     "        _delete_event_trackers(dataset_group_arn)\n",
     "\n",
-    "        # 4. Delete filters\n",
+    "        # 5. Delete filters\n",
     "        _delete_filters(dataset_group_arn)\n",
     "\n",
-    "        # 5. Delete datasets and their schemas\n",
+    "        # 6. Delete datasets and their schemas\n",
     "        _delete_datasets_and_schemas(dataset_group_arn)\n",
     "\n",
-    "        # 6. Delete dataset group\n",
+    "        # 7. Delete dataset group\n",
     "        _delete_dataset_group(dataset_group_arn)\n",
     "\n",
     "        logger.info(f'Dataset group {dataset_group_arn} fully deleted')\n",
