Adds a check for dataset creation status
This prevents an error that happens if the cells are run too quickly
and the dataset has not yet finished creating when the import job is started.

--- a/notebooks/Media/01_Data_Layer.ipynb
+++ b/notebooks/Media/01_Data_Layer.ipynb
@@ -59,7 +59,6 @@
     "\n",
     "1. Video-on-demand applications\n",
     "1. E-commerce platforms\n",
-    "1. Social media aggregators / platforms\n",
     "\n",
     "Defining your use-case will inform what data and what type of data you need.\n",
     "\n",
@@ -256,6 +255,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arb_time_stamp = original_data.iloc[50]['timestamp']\n",
+    "print(arb_time_stamp)\n",
+    "print(datetime.utcfromtimestamp(arb_time_stamp).strftime('%Y-%m-%d %H:%M:%S'))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -271,17 +281,6 @@
    "metadata": {},
    "source": [
     "Do a quick sanity check on the transformed dataset by picking an arbitrary timestamp and transforming it to a human-readable format."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "arb_time_stamp = original_data.iloc[50]['timestamp']\n",
-    "print(arb_time_stamp)\n",
-    "print(datetime.utcfromtimestamp(arb_time_stamp).strftime('%Y-%m-%d %H:%M:%S'))"
    ]
   },
   {
@@ -576,7 +575,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will add a new dataframe to help us generate a creation timestamp. If you don’t provide the CREATION_TIMESTAMP for an item, the model infers this information from the interaction dataset and uses the timestamp of the item’s earliest interaction as its corresponding release date. If an item doesn’t have an interaction, its release date is set as the timestamp of the latest interaction in the training set and it is considered a new item. For the current dataset we will set the CREATION_TIMESTAMP to 0."
+    "We will add a new dataframe to help us generate a creation timestamp. If you don’t provide the CREATION_TIMESTAMP for an item, the model infers this information from the interaction dataset and uses the timestamp of the item’s earliest interaction as its corresponding release date. If an item doesn’t have an interaction, its release date is set as the timestamp of the latest interaction in the training set and it is considered a new item. \n",
+    "\n",
+    "For the current example we are selecting a today's date as the creation timestamp because the actual creation timestamp is unknown. In your use-case, please provide the appropriate creation timestamp for the item. This can be when the item was added to your platform."
    ]
   },
   {
@@ -585,7 +586,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "itemmetadata_df['CREATION_TIMESTAMP'] = 0"
+    "ts = datetime(2022, 1, 1, 0, 0).strftime('%s')\n",
+    "print(ts)\n",
+    "\n",
+    "itemmetadata_df['CREATION_TIMESTAMP'] = ts"
    ]
   },
   {
@@ -1201,6 +1205,59 @@
     "\n",
     "users_dataset_arn = create_dataset_response['datasetArn']\n",
     "print(json.dumps(create_dataset_response, indent=2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's wait untill all the datasets have been created."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "\n",
+    "max_time = time.time() + 6*60*60 # 6 hours\n",
+    "while time.time() < max_time:\n",
+    "    describe_dataset_response = personalize.describe_dataset(\n",
+    "        datasetArn = interactions_dataset_arn\n",
+    "    )\n",
+    "    status =  describe_dataset_response[\"dataset\"]['status']\n",
+    "    print(\"Interactions Dataset: {}\".format(status))\n",
+    "    \n",
+    "    if status == \"ACTIVE\" or status == \"CREATE FAILED\":\n",
+    "        break\n",
+    "        \n",
+    "    time.sleep(60)\n",
+    "    \n",
+    "while time.time() < max_time:\n",
+    "    describe_dataset_response = personalize.describe_dataset(\n",
+    "        datasetArn = items_dataset_arn\n",
+    "    )\n",
+    "    status =  describe_dataset_response[\"dataset\"]['status']\n",
+    "    print(\"Items Dataset: {}\".format(status))\n",
+    "    \n",
+    "    if status == \"ACTIVE\" or status == \"CREATE FAILED\":\n",
+    "        break\n",
+    "        \n",
+    "    time.sleep(60)\n",
+    "    \n",
+    "while time.time() < max_time:\n",
+    "    describe_dataset_response = personalize.describe_dataset(\n",
+    "        datasetArn = users_dataset_arn\n",
+    "    )\n",
+    "    status =  describe_dataset_response[\"dataset\"]['status']\n",
+    "    print(\"Users Dataset: {}\".format(status))\n",
+    "    \n",
+    "    if status == \"ACTIVE\" or status == \"CREATE FAILED\":\n",
+    "        break\n",
+    "        \n",
+    "    time.sleep(60)"
    ]
   },
   {
