Adds more information and fixes index
Adds information to match the retail notebook and fixes missing sections in the index for better navigation.

--- a/notebooks/Media/01_Data_Layer.ipynb
+++ b/notebooks/Media/01_Data_Layer.ipynb
@@ -14,9 +14,15 @@
     "1. [Choose a dataset or data source](#source)\n",
     "1. [Prepare the Interactions data](#prepare_interactions)\n",
     "1. [Prepare the Items data](#prepare_items)\n",
-    "1. [Create dataset groups and the interactions dataset](#group_dataset)\n",
-    "1. [Configure an S3 bucket and an IAM role](#bucket_role)\n",
-    "1. [Import the interactions data](#import)\n",
+    "1. [Prepare the Users data](#prepare_users)\n",
+    "1. [Configure an S3 bucket and an IAM  role](#bucket_role)\n",
+    "1. [Create dataset group](#group_dataset)\n",
+    "1. [Create the Interactions Schema](#interact_schema)\n",
+    "1. [Create the Items (movies) Schema](#items_schema)\n",
+    "1. [Create the Users Schema](#users_schema)\n",
+    "1. [Import the Interactions data](#import_interactions)\n",
+    "1. [Import the Items metadata](#import_items)\n",
+    "1. [Import the User metadata](#import_users)\n",
     "\n",
     "## How to Use the Notebook <a class=\"anchor\" id=\"usenotebook\"></a>\n",
     "\n",
@@ -714,7 +720,9 @@
     "## Configure an S3 bucket and an IAM  role <a class=\"anchor\" id=\"bucket_role\"></a>\n",
     "[Back to top](#top)\n",
     "\n",
-    "So far, we have downloaded, manipulated, and saved the data onto the Amazon EBS instance attached to instance running this Jupyter notebook. However, Amazon Personalize will need an S3 bucket to act as the source of your data, as well as IAM roles for accessing that bucket. Let's set all of that up.\n",
+    "So far, we have downloaded, manipulated, and saved the data onto the Amazon EBS instance attached to instance running this Jupyter notebook. \n",
+    "\n",
+    "By default, the Personalize service does not have permission to acccess the data we uploaded into the S3 bucket in our account. In order to grant access to the  Personalize service to read our CSVs, we need to set a Bucket Policy and create an IAM role that the Amazon Personalize service will assume. Let's set all of that up.\n",
     "\n",
     "Use the metadata stored on the instance underlying this Amazon SageMaker notebook, to determine the region it is operating in. If you are using a Jupyter notebook outside of Amazon SageMaker, simply define the region as a string below. The Amazon S3 bucket needs to be in the same region as the Amazon Personalize resources we have been creating so far."
    ]
@@ -817,7 +825,7 @@
    "source": [
     "iam = boto3.client(\"iam\")\n",
     "\n",
-    "role_name = \"PersonalizeRolePOC\"\n",
+    "role_name = account_id+\"-PersonalizeS3\"\n",
     "assume_role_policy_document = {\n",
     "    \"Version\": \"2012-10-17\",\n",
     "    \"Statement\": [\n",
@@ -831,29 +839,32 @@
     "    ]\n",
     "}\n",
     "\n",
-    "create_role_response = iam.create_role(\n",
-    "    RoleName = role_name,\n",
-    "    AssumeRolePolicyDocument = json.dumps(assume_role_policy_document)\n",
-    ")\n",
-    "\n",
-    "# AmazonPersonalizeFullAccess provides access to any S3 bucket with a name that includes \"personalize\" or \"Personalize\" \n",
-    "# if you would like to use a bucket with a different name, please consider creating and attaching a new policy\n",
-    "# that provides read access to your bucket or attaching the AmazonS3ReadOnlyAccess policy to the role\n",
-    "policy_arn = \"arn:aws:iam::aws:policy/service-role/AmazonPersonalizeFullAccess\"\n",
-    "iam.attach_role_policy(\n",
-    "    RoleName = role_name,\n",
-    "    PolicyArn = policy_arn\n",
-    ")\n",
-    "\n",
-    "# Now add S3 support\n",
-    "iam.attach_role_policy(\n",
-    "    PolicyArn='arn:aws:iam::aws:policy/AmazonS3FullAccess',\n",
-    "    RoleName=role_name\n",
-    ")\n",
-    "time.sleep(60) # wait for a minute to allow IAM role policy attachment to propagate\n",
+    "try:\n",
+    "    create_role_response = iam.create_role(\n",
+    "        RoleName = role_name,\n",
+    "        AssumeRolePolicyDocument = json.dumps(assume_role_policy_document)\n",
+    "    );\n",
+    "    \n",
+    "except iam.exceptions.EntityAlreadyExistsException as e:\n",
+    "    print('Warning: role already exists:', e)\n",
+    "    create_role_response = iam.get_role(\n",
+    "        RoleName = role_name\n",
+    "    );\n",
     "\n",
     "role_arn = create_role_response[\"Role\"][\"Arn\"]\n",
-    "print(role_arn)"
+    "    \n",
+    "print('IAM Role: {}'.format(role_arn))\n",
+    "    \n",
+    "attach_response = iam.attach_role_policy(\n",
+    "    RoleName = role_name,\n",
+    "    PolicyArn = \"arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess\"\n",
+    ");\n",
+    "\n",
+    "role_arn = create_role_response[\"Role\"][\"Arn\"]\n",
+    "\n",
+    "# Pause to allow role to be fully consistent\n",
+    "time.sleep(30)\n",
+    "print('Done.')"
    ]
   },
   {
@@ -899,7 +910,7 @@
     "* User metadata\n",
     "* Item metadata\n",
     "\n",
-    "Before we create the dataset group and the dataset for our interaction data, let's validate that your environment can communicate successfully with Amazon Personalize."
+    "We need to create the dataset group that will contain our three datasets."
    ]
   },
   {
@@ -935,14 +946,18 @@
     ")\n",
     "\n",
     "dataset_group_arn = create_dataset_group_response['datasetGroupArn']\n",
-    "print(json.dumps(create_dataset_group_response, indent=2))"
+    "print(json.dumps(create_dataset_group_response, indent=2))\n",
+    "\n",
+    "print(f'DatasetGroupArn = {dataset_group_arn}')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wait for Dataset Group to Have ACTIVE Status Before we can use the Dataset Group in any items below it must be active, execute the cell below and wait for it to show active."
+    "#### Wait for Dataset Group to Have ACTIVE Status \n",
+    "\n",
+    "Before we can use the Dataset Group in any items below it must be active. This can take a minute or two. Execute the cell below and wait for it to show the ACTIVE status. It checks the status of the dataset group every 60 seconds, up to a maximum of 3 hours."
    ]
   },
   {
@@ -976,11 +991,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create the Interactions Schema\n",
+    "## Create the Interactions Schema <a class=\"anchor\" id=\"interact_schema\"></a>\n",
+    "[Back to top](#top)\n",
+    "\n",
+    "Now that we've loaded and prepared our three datasets we'll need to configure the Amazon Personalize service to understand our data so that it can be used to train models for generating recommendations.Amazon Personalize requires a schema for each dataset so it can map the columns in our CSVs to fields for model training. Each schema is declared in JSON using the [Apache Avro](https://avro.apache.org/) format. \n",
     "\n",
     "First, define a schema to tell Amazon Personalize what type of dataset you are uploading. There are several reserved and mandatory keywords required in the schema, based on the type of dataset. More detailed information can be found in the [documentation](https://docs.aws.amazon.com/personalize/latest/dg/how-it-works-dataset-schema.html).\n",
     "\n",
     "Here, you will create a schema for interactions data, which requires the `USER_ID`, `ITEM_ID`, and `TIMESTAMP` fields. These must be defined in the same order in the schema as they appear in the dataset."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The interactions dataset has three required columns: `ITEM_ID`, `USER_ID`, and `TIMESTAMP`. The `TIMESTAMP` represents when the user interated with an item and must be expressed in Unix timestamp format (seconds). For this dataset we also have an `EVENT_TYPE` column."
    ]
   },
   {
@@ -1003,7 +1028,7 @@
     "            \"type\": \"string\"\n",
     "        },\n",
     "        {\n",
-    "            \"name\": \"EVENT_TYPE\",\n",
+    "            \"name\": \"EVENT_TYPE\", # \"Watch\", \"Click\", etc.\n",
     "            \"type\": \"string\"\n",
     "        },\n",
     "        {\n",
@@ -1014,14 +1039,21 @@
     "    \"version\": \"1.0\"\n",
     "}\n",
     "\n",
-    "create_schema_response = personalize.create_schema(\n",
-    "    name = \"personalize-poc-movielens-interactions-schema\",\n",
-    "    schema = json.dumps(interactions_schema),\n",
-    "    domain='VIDEO_ON_DEMAND'\n",
-    ")\n",
-    "\n",
-    "interactions_schema_arn = create_schema_response['schemaArn']\n",
-    "print(json.dumps(create_schema_response, indent=2))"
+    "try:\n",
+    "    create_schema_response = personalize.create_schema(\n",
+    "        name = \"personalize-poc-movielens-interactions-schema\",\n",
+    "        schema = json.dumps(interactions_schema),\n",
+    "        domain='VIDEO_ON_DEMAND'\n",
+    "    )\n",
+    "    print(json.dumps(create_schema_response, indent=2))\n",
+    "    interactions_schema_arn = create_schema_response['schemaArn']\n",
+    "except personalize.exceptions.ResourceAlreadyExistsException:\n",
+    "    print('You aready created this schema.')\n",
+    "    schemas = personalize.list_schemas(maxResults=100)['schemas']\n",
+    "    for schema_response in schemas:\n",
+    "        if schema_response['name'] == \"personalize-poc-movielens-interactions-schema\":\n",
+    "            interactions_schema_arn = schema_response['schemaArn']\n",
+    "            print(f\"Using existing schema: {interactions_schema_arn}\")"
    ]
   },
   {
@@ -1055,7 +1087,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create the Items (movies) schema"
+    "## Create the Items (movies) schema<a class=\"anchor\" id=\"items_schema\"></a>\n",
+    "[Back to top](#top)"
    ]
   },
   {
@@ -1097,15 +1130,22 @@
     "    ],\n",
     "    \"version\": \"1.0\"\n",
     "}\n",
-    "\n",
-    "create_schema_response = personalize.create_schema(\n",
-    "    name = \"personalize-poc-movielens-items-schema\",\n",
-    "    schema = json.dumps(items_schema),\n",
-    "    domain='VIDEO_ON_DEMAND'\n",
-    ")\n",
-    "\n",
-    "items_schema_arn = create_schema_response['schemaArn']\n",
-    "print(json.dumps(create_schema_response, indent=2))"
+    "    \n",
+    "try:\n",
+    "    create_schema_response = personalize.create_schema(\n",
+    "        name = \"personalize-poc-movielens-items-schema\",\n",
+    "        schema = json.dumps(items_schema),\n",
+    "        domain='VIDEO_ON_DEMAND'\n",
+    "    )\n",
+    "    items_schema_arn = create_schema_response['schemaArn']\n",
+    "    print(json.dumps(create_schema_response, indent=2))\n",
+    "except personalize.exceptions.ResourceAlreadyExistsException:\n",
+    "    print('You aready created this schema.')\n",
+    "    schemas = personalize.list_schemas(maxResults=100)['schemas']\n",
+    "    for schema_response in schemas:\n",
+    "        if schema_response['name'] == \"personalize-poc-movielens-items-schema\":\n",
+    "            items_schema_arn = schema_response['schemaArn']\n",
+    "            print(f\"Using existing schema: {items_schema_arn}\")\n"
    ]
   },
   {
@@ -1139,7 +1179,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create the Users schema\n",
+    "## Create the Users schema<a class=\"anchor\" id=\"users_schema\"></a>\n",
+    "[Back to top](#top)\n",
     "\n",
     "First, define a schema to tell Amazon Personalize what type of dataset you are uploading. There are several reserved and mandatory keywords required in the schema, based on the type of dataset. More detailed information can be found in the [documentation](https://docs.aws.amazon.com/personalize/latest/dg/how-it-works-dataset-schema.html).\n",
     "\n",
@@ -1169,15 +1210,22 @@
     "    ],\n",
     "    \"version\": \"1.0\"\n",
     "}\n",
-    "\n",
-    "create_schema_response = personalize.create_schema(\n",
-    "    name = \"personalize-poc-movielens-users-schema\",\n",
-    "    schema = json.dumps(users_schema),\n",
-    "    domain='VIDEO_ON_DEMAND'\n",
-    ")\n",
-    "\n",
-    "users_schema_arn = create_schema_response['schemaArn']\n",
-    "print(json.dumps(create_schema_response, indent=2))"
+    "    \n",
+    "try:\n",
+    "    create_schema_response = personalize.create_schema(\n",
+    "        name = \"personalize-poc-movielens-users-schema\",\n",
+    "        schema = json.dumps(users_schema),\n",
+    "        domain='VIDEO_ON_DEMAND'\n",
+    "    )\n",
+    "    print(json.dumps(create_schema_response, indent=2))\n",
+    "    users_schema_arn = create_schema_response['schemaArn']\n",
+    "except personalize.exceptions.ResourceAlreadyExistsException:\n",
+    "    print('You aready created this schema.')\n",
+    "    schemas = personalize.list_schemas(maxResults=100)['schemas']\n",
+    "    for schema_response in schemas:\n",
+    "        if schema_response['name'] == \"personalize-poc-movielens-users-schema\":\n",
+    "            users_schema_arn = schema_response['schemaArn']\n",
+    "            print(f\"Using existing schema: {users_schema_arn}\")"
    ]
   },
   {
@@ -1264,7 +1312,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Import the interactions data <a class=\"anchor\" id=\"import\"></a>\n",
+    "## Import the interactions data <a class=\"anchor\" id=\"import_interactions\"></a>\n",
     "[Back to top](#top)\n",
     "\n",
     "Earlier you created the dataset group and dataset to house your information, so now you will execute an import job that will load the interactions data from the S3 bucket into the Amazon Personalize dataset. "
@@ -1293,7 +1341,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Import the item metadata <a class=\"anchor\" id=\"import\"></a>\n",
+    "## Import the item metadata <a class=\"anchor\" id=\"import_items\"></a>\n",
     "[Back to top](#top)\n",
     "\n",
     "Earlier you created the dataset group and dataset to house your information, now you will execute an import job that will load the item data from the S3 bucket into the Amazon Personalize dataset. "
@@ -1322,7 +1370,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Import the user metadata <a class=\"anchor\" id=\"import\"></a>\n",
+    "## Import the user metadata <a class=\"anchor\" id=\"import_users\"></a>\n",
     "[Back to top](#top)\n",
     "\n",
     "Earlier you created the dataset group and dataset to house your information, now you will execute an import job that will load the user data from the S3 bucket into the Amazon Personalize dataset. "
@@ -1353,7 +1401,7 @@
    "source": [
     "Before we can use the dataset, the import job must be active. Execute the cell below and wait for it to show the ACTIVE status. It checks the status of the import job every minute, up to a maximum of 6 hours.\n",
     "\n",
-    "Importing the data can take some time, depending on the size of the dataset. In this workshop, the data import job should take around 15 minutes. We need to wait for the data imports to complete."
+    "Importing the data can take some time, depending on the size of the dataset. In this workshop, the data import job should take around 15 minutes. While you're waiting you can learn more about Datasets and Schemas in [the documentation](https://docs.aws.amazon.com/personalize/latest/dg/how-it-works-dataset-schema.html). We need to wait for the data imports to complete."
    ]
   },
   {
@@ -1406,7 +1454,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With all imports now complete you can  start training recommenders. Run the cell below before moving on to store a few values for usage in the next notebooks. After completing that cell open notebook `02_Training_Layer.ipynb` to continue."
+    "With all imports now complete you can  start training recommenders and solutions. Run the cell below before moving on to store a few values for usage in the next notebooks. After completing that cell open notebook `02_Training_Layer.ipynb` to continue."
    ]
   },
   {
